--- a/maromba-web/src/pages/Login/Login.css
+++ b/maromba-web/src/pages/Login/Login.css
@@ -57,6 +57,11 @@
   border: 0;
   font-weight: 600;
   letter-spacing: 2px;
+  box-shadow: 5px 5px 5px black;
+}
+
+.login-form button:hover {
+  box-shadow: 10px 10px 5px black;
 }
 
 .login-form a {
