--- a/maromba-web/styles.css
+++ b/maromba-web/styles.css
@@ -6,6 +6,7 @@ html,
 body,
 .wrapper {
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -13,7 +14,7 @@ body {
   place-items: center;
   margin: 0;
   padding: 0 24px;
-  background: linear-gradient(45deg, #000000, #000000, #3E065F, #3E065F, #700B97, #700B97, #8E05C2);
+  background: linear-gradient(135deg, #000000, #3E065F, #3E065F, #3E065F, #700B97, #8E05C2);
   background-size: 300% 300%;
   animation: colors 10s ease infinite;
   color: #f9f9f9;
@@ -38,8 +39,19 @@ body {
   }
 }
 
-@media (width >=500px) {
+@media (width >= 500px) {
   body {
     padding: 0;
   }
+}
+
+@media (width <= 300px) {
+  body {
+    font-family: 20px;
+  }
+}
+
+#root {
+  width: 100%;
+  height: 100%; 
 }
