--- a/maromba-web/src/components/Select/Select.css
+++ b/maromba-web/src/components/Select/Select.css
@@ -19,7 +19,7 @@
     color: #f9f9f9;
 }
 
-.textbox input {
+.textbox select {
     width: 100%;
     height: 60px;
     outline: none;
@@ -29,7 +29,7 @@
     border-radius: 8px;
 }
 
-.textbox input {
+.textbox select {
     background: transparent;
     border: 0;
     font-size: 18px;
@@ -39,23 +39,23 @@
     border-radius: 0px;
 }
 
-.textbox input:focus {
+.textbox select:focus {
     border-color: #3E065F;
 }
 
-.textbox> :is(input:focus, input.has-value)~label {
+.textbox> :is(select:focus, select.has-value)~label {
     translate: -51px -40px;
     scale: 0.875;
     color: #f9f9f9;
 }
 
-.unIncon> :is(input:focus, input.has-value)~label {
+.unIncon> :is(select:focus, select.has-value)~label {
     translate: -3px -40px;
     scale: 0.875;
     color: #f9f9f9;
 }
 
-input {
+select {
     -webkit-text-fill-color: white;
     -webkit-background-clip: text !important;
 }
@@ -79,16 +79,4 @@ input {
     75% {
         translate: -8px 0;
     }
-}
-
-
-/* Chrome e outros */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
 }
