--- a/maromba-web/src/pages/Initial/Initial.css
+++ b/maromba-web/src/pages/Initial/Initial.css
@@ -1,30 +1,27 @@
-.login {
-  position: fixed;
-  z-index: 3;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-  width: 90%;
-  padding: 70px 30px 44px;
+.panel {
   border-radius: 22px;
   background: #161616;
   text-align: center;
   box-shadow: rgb(0 0 0 / 50%) 20px 20px 20px 0px, rgb(0 0 0 / 50%) 0px 6px 6px;
+  width: 90%;
+  height: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  opacity: 0.5;
 }
 
-@media (width >=450px) {
-  .login {
-    width: 380px;
-  }
+h1 {
+  margin-block-start: 0px;
 }
 
-.login>h2 {
+.panel>h2 {
   font-size: 36px;
   font-weight: 500;
   margin: 0 0 4px;
 }
 
-.login>h3 {
+.panel>h3 {
   color: rgba(255, 255, 255, 0.38);
   margin: 0 0 30px;
   font-weight: 500;
@@ -75,6 +72,7 @@
   animation: colors 10s ease infinite;
   color: #fff;
   border-radius: 5px;
+
 }
 
 .login-form button span {
