--- a/maromba-web/src/pages/Menu/Menu.css
+++ b/maromba-web/src/pages/Menu/Menu.css
@@ -14,6 +14,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    padding: 60px 80px;
 }
 
 .sidebar {
@@ -30,6 +31,7 @@
     box-shadow: rgb(0 0 0 / 50%) 10px 10px 20px 0px, rgb(0 0 0 / 50%) 6px 6px 6px;
     transition: 0.3s;
     border-radius: 0px 22px 22px 0px;
+    opacity: 0.6;
 }
 
 .sidebar-header {
@@ -172,6 +174,7 @@
 
     .frame {
         width: calc( 100% - 75px);
+        padding: 30px 30px;
     }
 
     .logo-img {
