--- a/maromba-web/src/pages/User/User.css
+++ b/maromba-web/src/pages/User/User.css
@@ -2,16 +2,12 @@
   border-radius: 22px;
   background: #161616;
   text-align: center;
-  box-shadow: rgb(0 0 0 / 50%) 20px 20px 20px 0px, rgb(0 0 0 / 50%) 0px 6px 6px;
-  width: 100%;
+  box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
+  width: 60%;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  opacity: 0.6;
-}
-
-h1 {
-  margin-block-start: 0px;
+  opacity: 0.7;
 }
 
 .panel>h2 {
@@ -33,4 +29,10 @@ h1 {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+@media (width <= 700px) {
+  .panel {
+    width: 100%;
+  }
 }
