--- a/maromba-web/src/components/DatePicker/DatePicker.css
+++ b/maromba-web/src/components/DatePicker/DatePicker.css
@@ -1,19 +1,20 @@
 .databox {
     width: 72%;
     position: relative;
+    height: 60px;
 }
 
 .databox label {
     position: absolute;
     top: 50%;
     left: 50px;
-    translate: 0 -50%;
+    translate: 0 -30%;
     color: #f9f9f9;
 }
 
 .databox input {
     width: 100%;
-    height: 60px;
+    height: 45px;
     outline: none;
     padding: 0;
     font-family: inherit;
@@ -25,6 +26,7 @@
     color: inherit;
     border-bottom: 2px solid #f9f9f9;
     border-radius: 0px;
+    margin-top: 15px;
 }
 
 
@@ -38,7 +40,7 @@ input {
 }
 
 .focusLabel {
-    translate: -10px -40px !important;
+    translate: -10px -30px !important;
     scale: 0.875 !important;
     color: #f9f9f9 !important;
 }
@@ -70,9 +72,10 @@ input {
 
 .react-datepicker__input-container .react-datepicker__calendar-icon {
     padding: 0px !important;
-    margin-top: 20px;
+    margin-top: 26px;
     right: 1px;
     fill: white;
+    cursor: pointer;
 }
 
 .react-datepicker__header {
