--- a/maromba-web/src/pages/User/User.css
+++ b/maromba-web/src/pages/User/User.css
@@ -1,13 +1,16 @@
 .panel {
-  border-radius: 22px;
+  border-radius: 20px;
   background: #161616;
   text-align: center;
   box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
   width: 60%;
-  height: 100%;
+  height: 80%;
   margin-left: auto;
   margin-right: auto;
   opacity: 0.7;
+  display: grid;
+  align-items: center;
+  overflow: hidden;
 }
 
 .panel>h2 {
@@ -29,6 +32,21 @@
   width: 100%;
   height: 100%;
   margin: 0;
+  gap: 5px;
+  overflow-y:auto;
+  padding: 30px 30px;
+}
+
+@media (width <= 1230px) {
+  .panel {
+    width: 70%;
+  }
+}
+
+@media (width <= 990px) {
+  .panel {
+    width: 80%;
+  }
 }
 
 @media (width <= 700px) {
