--- a/maromba-web/styles.css
+++ b/maromba-web/styles.css
@@ -1,13 +1,13 @@
 * {
-  box-sizing: border-box;
-  letter-spacing: 1px;
+  box-sizing: border-box !important;
+  letter-spacing: 1px !important;
   font-family: "Sora";
 }
 
 html,
 body,
 .wrapper {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -19,7 +19,6 @@ body {
   background-size: 300% 300%;
   animation: colors 10s ease infinite;
   color: #f9f9f9;
-  
 }
 
 h1 {
@@ -64,6 +63,22 @@ h1 {
   }
 }
 
+@keyframes shake {
+
+  0%,
+  100% {
+      translate: 0;
+  }
+
+  25% {
+      translate: 8px 0;
+  }
+
+  75% {
+      translate: -8px 0;
+  }
+}
+
 @media (width <= 300px) {
   body {
     font-family: 20px;
@@ -80,6 +95,10 @@ h1 {
   position: relative;
 }
 
+.ml5 {
+  margin-left: 5px;
+}
+
 .mt20 {
   margin-top: 20px;
 }
@@ -88,10 +107,14 @@ h1 {
   margin-bottom: 20px;
 }
 
+.mb0 {
+  margin-bottom: 0px;
+}
+
 .mainButton {
   padding: 10px 20px;
   color: white;
-  margin-top: 10px;
+  margin-top: 30px;
   background-color:#700B97;
   width: auto !important;
   height: auto;
@@ -106,19 +129,41 @@ h1 {
 .textbox {
   width: 72%;
   position: relative;
+  height: 60px;
 }
 
 .textbox span {
   position: absolute;
   top: 50%;
-  left: 16px;
-  translate: 0 -50%;
+  left: 6px;
+  translate: 0 -30%;
   color: #f9f9f9;
 }
 
 .textbox label {
   position: absolute;
   top: 50%;
-  translate: 0 -50%;
+  translate: 0 -10%;
   color: #f9f9f9;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #313131;
+}
+
+::-webkit-scrollbar-track {
+  background: #313131;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #5f5f5f;
+  border-radius: 22px;
+  border: 1px solid #5f5f5f
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #909090;
 }
