--- a/maromba-web/src/pages/Menu/Menu.css
+++ b/maromba-web/src/pages/Menu/Menu.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    align-items: center;
 }
 
 .menu {
@@ -14,7 +15,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 60px 80px;
+    padding: 0px 50px;
 }
 
 .sidebar {
@@ -31,7 +32,6 @@
     box-shadow: rgb(0 0 0 / 50%) 10px 10px 20px 0px, rgb(0 0 0 / 50%) 6px 6px 6px;
     transition: 0.3s;
     border-radius: 0px 22px 22px 0px;
-    opacity: 0.7;
 }
 
 .sidebar-header {
@@ -92,7 +92,7 @@
     gap: 12px;
     height: 48px;
     padding: 0 12px;
-    border-radius: 24px;
+    border-radius: 2px;
     line-height: 1;
 }
 
@@ -245,7 +245,7 @@
         gap: 12px;
         height: 48px;
         padding: 0 12px;
-        border-radius: 24px;
+        border-radius: 22px;
         line-height: 1;
         width: 230px !important;
     }
@@ -268,10 +268,6 @@
 
     .openCloseMenu .frame {
         filter: blur(1.0rem);
-    }
-
-    .openCloseMenu .sidebar {
-        opacity: 0.8;
     }
     
 }
