--- a/maromba-web/src/components/DatePicker/DatePicker.css
+++ b/maromba-web/src/components/DatePicker/DatePicker.css
@@ -7,19 +7,18 @@
 .databox label {
     position: absolute;
     top: 50%;
-    left: 50px;
-    translate: 0 -30%;
+    translate: 0px -9px;
     color: #f9f9f9;
 }
 
 .databox input {
     width: 100%;
-    height: 45px;
+    height: 35px;
     outline: none;
     padding: 0;
     font-family: inherit;
     border: 0;
-    font-size: 18px;
+    font-size: 17px;
     padding: 0 0 0 4px !important;
     border-radius: 8px;
     background: transparent;
@@ -40,9 +39,10 @@ input {
 }
 
 .focusLabel {
-    translate: -10px -30px !important;
-    scale: 0.875 !important;
-    color: #f9f9f9 !important;
+    translate: -0px -32px !important;
+    color: #f9f9f9;
+    font-size: 0.85em;
+    left: 0px !important;
 }
 
 .invalid {
@@ -72,7 +72,7 @@ input {
 
 .react-datepicker__input-container .react-datepicker__calendar-icon {
     padding: 0px !important;
-    margin-top: 26px;
+    margin-top: 23px;
     right: 1px;
     fill: white;
     cursor: pointer;
