--- a/maromba-web/styles.css
+++ b/maromba-web/styles.css
@@ -114,11 +114,11 @@ h1 {
 .mainButton {
   padding: 10px 20px;
   color: white;
-  margin-top: 30px;
+  margin-top: 15px;
   background-color:#700B97;
   width: auto !important;
   height: auto;
-  font-size: 16px;
+  font-size: 17px;
   border-radius: 8px;
   cursor: pointer;
   border: 0;
@@ -136,14 +136,14 @@ h1 {
   position: absolute;
   top: 50%;
   left: 6px;
-  translate: 0 -30%;
+  translate: 0 -40%;
   color: #f9f9f9;
 }
 
 .textbox label {
   position: absolute;
   top: 50%;
-  translate: 0 -10%;
+  translate: 0px -9px;
   color: #f9f9f9;
 }
 
