--- a/maromba-web/src/components/Select/Select.css
+++ b/maromba-web/src/components/Select/Select.css
@@ -1,45 +1,34 @@
-.textbox select {
+.textbox input {
     width: 100%;
-    height: 60px;
-    outline: none;
-    padding: 0;
-    font-family: inherit;
-    font-size: 16px;
-    border-radius: 8px;
-}
-
-.textbox select {
+    height: 35px;
     background: transparent;
     border: 0;
-    font-size: 18px;
+    font-size: 17px;
     padding: 0 20px 0 50px;
     color: inherit;
     border-bottom: 2px solid #f9f9f9;
     border-radius: 0px;
+    outline: none;
+    margin-top: 15px;
 }
 
-.textbox select:focus {
+.textbox input:focus {
     border-color: #3E065F;
 }
 
-.textbox> :is(select:focus, select.has-value)~label {
-    translate: -51px -40px;
-    scale: 0.875;
+.unIncon> :is(input:focus, input.has-value)~label {
+    translate: 0px -32px;
     color: #f9f9f9;
+    font-size: 0.85em;
+    left: 0px !important;
 }
 
-.unIncon> :is(select:focus, select.has-value)~label {
-    translate: -3px -40px;
-    scale: 0.875;
-    color: #f9f9f9;
-}
-
-select {
+input {
     -webkit-text-fill-color: white;
     -webkit-background-clip: text !important;
 }
 
-.invalid{
+.invalid {
     animation: shake 0.1635s 0s 3;
     border-color: red !important;
 }
@@ -58,4 +47,45 @@ select {
     75% {
         translate: -8px 0;
     }
+}
+
+/* Chrome e outros */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.listResult {
+    background-color: #000000;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 100%;
+    z-index: 9999;
+    position: fixed;
+}
+
+.listResultScroll {
+    max-height: 150px;
+    overflow: auto;
+}
+
+.listItem {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    cursor: pointer;
+    height: 40px;
+    padding: 5px 10px;
+    justify-content: flex-start;
+    scrollbar-width: thin;
+    scrollbar-color: #5f5f5f #313131;
+}
+
+.listItem:hover {
+    background-color: #3E065F;
+}
+
+.select {
+    cursor: pointer;
 }
