--- a/maromba-web/src/components/DatePicker/DatePicker.css
+++ b/maromba-web/src/components/DatePicker/DatePicker.css
@@ -1,78 +1,26 @@
-.databox {
-    width: 72%;
-    position: relative;
-    height: 60px;
-}
-
-.databox label {
-    position: absolute;
-    top: 50%;
-    translate: 0px -9px;
-    color: #f9f9f9;
-}
-
-.databox input {
-    width: 100%;
-    height: 35px;
-    outline: none;
-    padding: 0;
-    font-family: inherit;
-    border: 0;
-    font-size: 17px;
-    padding: 0 0 0 4px !important;
-    border-radius: 8px;
-    background: transparent;
-    color: inherit;
-    border-bottom: 2px solid #f9f9f9;
-    border-radius: 0px;
-    margin-top: 15px;
-}
-
-
-.databox input:focus {
-    border-color: #3E065F;
-}
-
-input {
-    -webkit-text-fill-color: white;
-    -webkit-background-clip: text !important;
-}
-
 .focusLabel {
     translate: -0px -32px !important;
     color: #f9f9f9;
-    font-size: 0.85em;
+    font-size: 0.85em !important;
     left: 0px !important;
 }
 
-.invalid {
-    animation: shake 0.1635s 0s 3;
-    border-color: red !important;
-}
-
-@keyframes shake {
-
-    0%,
-    100% {
-        translate: 0;
-    }
-
-    25% {
-        translate: 8px 0;
-    }
-
-    75% {
-        translate: -8px 0;
+@media (width <= 700px) {
+    .focusLabel {
+        font-size: 0.75em !important;
     }
 }
 
 .react-datepicker-wrapper {
     width: 100%;
 }
+.react-datepicker__view-calendar-icon input {
+    padding: 0 0 0 5px !important;
+}
 
 .react-datepicker__input-container .react-datepicker__calendar-icon {
     padding: 0px !important;
-    margin-top: 23px;
+    margin-top: 21px;
     right: 1px;
     fill: white;
     cursor: pointer;
@@ -87,7 +35,9 @@ input {
     border-bottom: 0px !important;
 }
 
-.react-datepicker__current-month, .react-datepicker-time__header, .react-datepicker-year-header {
+.react-datepicker__current-month,
+.react-datepicker-time__header,
+.react-datepicker-year-header {
     color: white !important;
 }
 
@@ -109,20 +59,37 @@ input {
     display: none;
 }
 
-.react-datepicker-popper[data-placement^=top] .react-datepicker__triangle::before, .react-datepicker-popper[data-placement^=top] .react-datepicker__triangle::after {
+.react-datepicker-popper[data-placement^=top] .react-datepicker__triangle::before,
+.react-datepicker-popper[data-placement^=top] .react-datepicker__triangle::after {
     border-top-color: #3E065F !important;
     display: none;
 }
 
-.react-datepicker__day-name, .react-datepicker__day, .react-datepicker__time-name {
+.react-datepicker__day-name,
+.react-datepicker__day,
+.react-datepicker__time-name {
     color: white !important;
 }
 
-.react-datepicker__day:hover, .react-datepicker__month-text:hover, .react-datepicker__quarter-text:hover, .react-datepicker__year-text:hover {
+.react-datepicker__day:hover,
+.react-datepicker__month-text:hover,
+.react-datepicker__quarter-text:hover,
+.react-datepicker__year-text:hover {
     background-color: #8E05C2 !important;
 }
 
-.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range, .react-datepicker__month-text--selected, .react-datepicker__month-text--in-selecting-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--selected, .react-datepicker__quarter-text--in-selecting-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--selected, .react-datepicker__year-text--in-selecting-range, .react-datepicker__year-text--in-range {
+.react-datepicker__day--selected,
+.react-datepicker__day--in-selecting-range,
+.react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range {
     background-color: #8E05C2 !important;
 }
 
@@ -141,7 +108,10 @@ input {
     transform: translate3d(12px, 0px, 0px) !important;
 }
 
-.react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected {
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
     background-color: #8E05C2 !important;
 }
 
