--- a/maromba-web/src/pages/User/User.css
+++ b/maromba-web/src/pages/User/User.css
@@ -23,7 +23,7 @@
   color: rgba(255, 255, 255, 0.38);
   margin: 0 0 30px;
   font-weight: 500;
-  font-size: 17px;
+  font-size: 18px;;
 }
 
 .user-form {
