Update of user page
Updating autocomplete, select, datePicker and input for better works with the new  users page, its to create a new user and change a existing user.
Add a table component.
Create some calls of users to back-end, add a gender, authorization e company calls and objects.

--- a/maromba-web/src/components/ComponentsStyle.css
+++ b/maromba-web/src/components/ComponentsStyle.css
@@ -105,6 +105,10 @@ input::-webkit-inner-spin-button {
     label {
         font-size: 13.3px !important;
     }
+
+    table {
+        font-size: 13.3px !important;
+    }
 }
 
 .list-result {
