--- a/maromba-web/src/components/ComponentsStyle.css
+++ b/maromba-web/src/components/ComponentsStyle.css
@@ -1,166 +1,164 @@
 .text-box {
-    width: 72%;
-    position: relative;
-    height: 60px;
+	width: 72%;
+	position: relative;
+	height: 60px;
 }
 
 .text-box span {
-    position: absolute;
-    top: 50%;
-    left: 6px;
-    translate: 0 -40%;
-    color: #f9f9f9;
+	position: absolute;
+	top: 50%;
+	translate: 0 -40%;
+	color: #f9f9f9;
+	right: -0.5%;
+	left: unset !important;
+	cursor: pointer;
 }
 
 .text-box label {
-    position: absolute;
-    top: 50%;
-    translate: 0px -8px;
-    color: #f9f9f9;
-    font-size: 18px;
+	position: absolute;
+	top: 50%;
+	translate: 0px -8px;
+	color: #f9f9f9;
+	font-size: 18px;
+	max-width: calc(100% - 5px); 
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	vertical-align: middle;
 }
 
 .text-box input {
-    width: 100%;
-    height: 35px;
-    background: transparent;
-    border: 0;
-    font-size: 18px;
-    padding: 0 20px 0 50px;
-    color: inherit;
-    border-bottom: 2px solid #f9f9f9;
-    border-radius: 0px;
-    outline: none;
-    margin-top: 15px;
-    -webkit-transition: border 400ms ease-out;
-    -moz-transition: border 400ms ease-out;
-    -o-transition: border 400ms ease-out;
-    transition: border 400ms ease-out;
+	width: 100%;
+	height: 35px;
+	background: transparent;
+	border: 0;
+	font-size: 18px;
+	padding: 0 20px 0 50px;
+	color: inherit;
+	border-bottom: 2px solid #f9f9f9;
+	border-radius: 0px;
+	outline: none;
+	margin-top: 15px;
+	-webkit-transition: border 400ms ease-out;
+	-moz-transition: border 400ms ease-out;
+	-o-transition: border 400ms ease-out;
+	transition: border 400ms ease-out;
 }
 
 .text-box input:focus {
-    border-color: #3E065F;
+	border-color: #3e065f;
 }
 
-.text-box> :is(input:focus, input.has-value)~label {
-    translate: 0px -32px;
-    color: #f9f9f9;
-    font-size: 0.85em;
-    left: 0px !important;
+.text-box > :is(input:focus, input.has-value) ~ label {
+	translate: 0px -32px;
+	color: #f9f9f9;
+	font-size: 0.85em;
+	left: 0px !important;
 }
 
-.text-box .unIcon> :is(input:focus, input.has-value)~label {
-    translate: 0px -32px;
-    color: #f9f9f9;
-    font-size: 0.85em;
-    left: 0px !important;
+.text-box .unIcon > :is(input:focus, input.has-value) ~ label {
+	translate: 0px -32px;
+	color: #f9f9f9;
+	font-size: 0.85em;
+	left: 0px !important;
 }
 
 .text-box input {
-    -webkit-text-fill-color: white;
-    -webkit-background-clip: text !important;
+	-webkit-text-fill-color: white;
+	-webkit-background-clip: text !important;
 }
 
 .text-box .invalid {
-    animation: shake 0.1635s 0s 3;
-    border-color: red !important;
+	animation: shake 0.1635s 0s 3;
+	border-color: red !important;
 }
 
 @keyframes shake {
+	0%,
+	100% {
+		translate: 0;
+	}
 
-    0%,
-    100% {
-        translate: 0;
-    }
+	25% {
+		translate: 8px 0;
+	}
 
-    25% {
-        translate: 8px 0;
-    }
-
-    75% {
-        translate: -8px 0;
-    }
+	75% {
+		translate: -8px 0;
+	}
 }
 
 /* Chrome e outros */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 @media (width <=700px) {
-    .text-box> :is(input:focus, input.has-value)~label {
-        font-size: 0.75em !important;
-    }
+	.text-box > :is(input:focus, input.has-value) ~ label {
+		font-size: 0.75em !important;
+	}
 
-    .text-box .unIcon> :is(input:focus, input.has-value)~label {
-        font-size: 0.75em !important;
-    }
+	.text-box .unIcon > :is(input:focus, input.has-value) ~ label {
+		font-size: 0.75em !important;
+	}
 
-    input {
-        font-size: 16px !important;
-    }
+	input {
+		font-size: 16px !important;
+	}
 
-    label {
-        font-size: 13.3px !important;
-    }
+	label {
+		font-size: 13.3px !important;
+	}
 
-    table {
-        font-size: 13.3px !important;
-    }
+	table {
+		font-size: 13.3px !important;
+	}
 }
 
 .list-result {
-    background-color: #000000;
-    border-radius: 5px;
-    overflow: hidden;
-    width: 100%;
-    z-index: 9999;
-    position: fixed;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+	background-color: #000000;
+	border-radius: 5px;
+	overflow: hidden;
+	width: 100%;
+	z-index: 9999;
+	position: fixed;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
 }
 
 .list-result-scroll {
-    max-height: 150px;
-    overflow: auto;
+	max-height: 150px;
+	overflow: auto;
 }
 
 .list-item {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    cursor: pointer;
-    height: 40px;
-    padding: 5px 10px;
-    justify-content: flex-start;
-    scrollbar-width: thin;
-    scrollbar-color: #5f5f5f #313131;
+	display: flex;
+	align-items: center;
+	gap: 16px;
+	cursor: pointer;
+	height: 40px;
+	padding: 5px 10px;
+	justify-content: flex-start;
+	scrollbar-width: thin;
+	scrollbar-color: #5f5f5f #313131;
 }
 
 .list-item:hover {
-    background-color: #3E065F;
+	background-color: #3e065f;
 }
 
 .right-icon {
-    display: inline-block;
-    right: -0.5%;
-    left: unset !important;
-    cursor: pointer;
-}
-
-.input-icon {
-    padding: 0px 30px 0px 40px !important;
-}
-
-.input-un-icon {
-    padding: 0px 0px 0px 5px !important;
+	display: inline-block;
+	right: -0.5%;
+	left: unset !important;
+	cursor: pointer;
 }
 
 .ml5 {
-    margin-left: 5px !important;
+	margin-left: 5px !important;
 }
 
 .pointer {
-    cursor: pointer;
+	cursor: pointer;
 }
