--- a/maromba-web/styles.css
+++ b/maromba-web/styles.css
@@ -1,161 +1,169 @@
 * {
-  box-sizing: border-box !important;
-  letter-spacing: 1px !important;
-  font-family: "Sora";
+	box-sizing: border-box !important;
+	letter-spacing: 1px !important;
+	font-family: "Sora";
 }
 
 html,
 body,
 .wrapper {
-  min-height: 100vh;
-  min-height: 100dvh;
-  width: 100%;
+	min-height: 100vh;
+	min-height: 100dvh;
+	width: 100%;
 }
 
 body {
-  display: grid;
-  place-items: center;
-  margin: 0;
-  background: linear-gradient(135deg, #161616, #3E065F, #700B97, #8E05C2) #700B97;
-  background-size: 300%;
-  animation: colors 10s ease infinite;
-  color: #f9f9f9;
+	display: grid;
+	place-items: center;
+	margin: 0;
+	background: linear-gradient(135deg, #161616, #3e065f, #700b97, #8e05c2)
+		#700b97;
+	background-size: 300%;
+	animation: colors 10s ease infinite;
+	color: #f9f9f9;
 }
 
 h1 {
-  margin-block-start: 0px;
+	margin-block-start: 0px;
 }
 
 @keyframes colors {
-  0% {
-    background-position: 15% 50%;
-  }
+	0% {
+		background-position: 15% 50%;
+	}
 
-  50% {
-    background-position: 50% 90%;
-  }
+	50% {
+		background-position: 50% 90%;
+	}
 
-  100% {
-    background-position: 15% 50%;
-  }
+	100% {
+		background-position: 15% 50%;
+	}
 }
 
 @media (width <= 700px) {
-  body {
-    h1 {
-     font-size: 24px !important;
-    }
+	body {
+		h1 {
+			font-size: 24px !important;
+		}
 
-    h2 {
-      font-size: 27px !important;
-    }
+		h2 {
+			font-size: 27px !important;
+		}
 
-    h3 {
-      font-size: 22.5px !important;
-    }
-  }
+		h3 {
+			font-size: 22.5px !important;
+		}
+	}
+
+	.main-button {
+		font-size: 16px !important;
+	}
+
+	.second-button {
+		font-size: 16px !important;
+	}
 }
 
 @keyframes shake {
+	0%,
+	100% {
+		translate: 0;
+	}
 
-  0%,
-  100% {
-      translate: 0;
-  }
+	25% {
+		translate: 8px 0;
+	}
 
-  25% {
-      translate: 8px 0;
-  }
-
-  75% {
-      translate: -8px 0;
-  }
+	75% {
+		translate: -8px 0;
+	}
 }
 
 @media (width <= 300px) {
-  body {
-    font-size: 20px;
-  }
+	body {
+		font-size: 20px !important;
+	}
 }
 
 #root {
-  width: 100%;
-  height: 100%; 
+	width: 100%;
+	height: 100%;
 }
 
 .ml5 {
-  margin-left: 5px;
+	margin-left: 5px;
 }
 
 .mt20 {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 .mb20 {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .mb0 {
-  margin-bottom: 0px;
+	margin-bottom: 0px;
 }
 
 .main-button {
-  padding: 10px 20px;
-  color: white;
-  margin-top: 15px;
-  background-color:#700B97;
-  width: auto !important;
-  height: auto;
-  font-size: 18px;;
-  border-radius: 8px;
-  cursor: pointer;
-  border: 0;
-  font-weight: 600;
-  box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
+	padding: 10px 20px;
+	color: white;
+	margin-top: 15px;
+	background-color: #700b97;
+	width: auto !important;
+	height: auto;
+	font-size: 18px;
+	border-radius: 8px;
+	cursor: pointer;
+	border: 0;
+	font-weight: 600;
+	box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
 }
 
 .main-button:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+	transform: scale(1.05);
+	box-shadow: rgb(0 0 0 / 90%) 0px 0px 20px;
 }
 
 .second-button {
-  padding: 10px 20px;
-  color: white;
-  margin-top: 15px;
-  background-color:transparent;
-  width: auto !important;
-  height: auto;
-  font-size: 18px;;
-  border-radius: 8px;
-  cursor: pointer;
-  border: 1px solid #700B97;
-  font-weight: 600;
-  box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
+	padding: 10px 20px;
+	color: white;
+	margin-top: 15px;
+	background-color: transparent;
+	width: auto !important;
+	height: auto;
+	font-size: 18px;
+	border-radius: 8px;
+	cursor: pointer;
+	border: 1px solid #700b97;
+	font-weight: 600;
+	box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
 }
 
 .second-button:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+	transform: scale(1.05);
+	box-shadow: rgb(0 0 0 / 90%) 0px 0px 20px;
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-  background-color: #313131;
+	width: 6px;
+	height: 6px;
+	background-color: #313131;
 }
 
 ::-webkit-scrollbar-track {
-  background: #313131;
-  border-radius: 8px;
+	background: #313131;
+	border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #5f5f5f;
-  border-radius: 22px;
-  border: 1px solid #5f5f5f
+	background-color: #5f5f5f;
+	border-radius: 22px;
+	border: 1px solid #5f5f5f;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #909090;
+	background-color: #909090;
 }
