--- a/maromba-web/src/components/ComponentsStyle.css
+++ b/maromba-web/src/components/ComponentsStyle.css
@@ -115,6 +115,10 @@ input::-webkit-inner-spin-button {
 	table {
 		font-size: 13.3px !important;
 	}
+
+    .list-item {
+        font-size: 16px !important;
+    }
 }
 
 .list-result {
@@ -142,6 +146,7 @@ input::-webkit-inner-spin-button {
 	justify-content: flex-start;
 	scrollbar-width: thin;
 	scrollbar-color: #5f5f5f #313131;
+    font-size: 18px;
 }
 
 .list-item:hover {
