--- a/maromba-web/src/pages/Login/Login.css
+++ b/maromba-web/src/pages/Login/Login.css
@@ -28,7 +28,7 @@
   color: rgba(255, 255, 255, 0.38);
   margin: 0 0 30px;
   font-weight: 500;
-  font-size: 18px;;
+  font-size: 18px;
 }
 
 .login-form {
