--- a/maromba-web/src/pages/Menu/Menu.css
+++ b/maromba-web/src/pages/Menu/Menu.css
@@ -1,300 +1,329 @@
 .contents {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	align-items: center;
 }
 
 .menu {
-    width: 250px;
-    height: 100%;
+	width: 250px;
+	height: 100%;
 }
 
 .frame {
-    width: calc( 100% - 250px);
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0px 50px;
+	width: calc(100% - 250px);
+	height: 100%;
+	display: flex;
+	align-items: center;
+	padding: 0px 50px;
 }
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 250px;
-    height: 100%;
-    padding: 40px 10px 30px 10px;
-    background: #161616;
-    box-shadow: rgb(0 0 0 / 50%) 10px 10px 20px 0px, rgb(0 0 0 / 50%) 6px 6px 6px;
-    transition: 0.3s;
-    border-radius: 0px 22px 22px 0px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 250px;
+	height: 100%;
+	padding: 40px 10px 30px 10px;
+	background: #161616;
+	box-shadow: rgb(0 0 0 / 50%) 10px 10px 20px 0px, rgb(0 0 0 / 50%) 6px 6px 6px;
+	transition: 0.3s;
+	border-radius: 0px 22px 22px 0px;
 }
 
 .sidebar-header {
-    width: 100%;
-    margin-bottom: 20px;
-    display: grid;
+	width: 100%;
+	margin-bottom: 20px;
+	display: grid;
+	justify-items: center;
+}
+
+.open-close-menu .sidebar-header {
+	justify-items: unset;
+}
+
+.name-company {
+	display: unset;
+}
+
+.open-close-menu .name-company {
+	display: none;
 }
 
 .profile {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    margin-bottom: 20px;
+	text-align: center;
+	margin-bottom: 60px;
 }
 
 .avatar {
-    width: 80px;
-    height: 80px;
-    margin-bottom: 20px;
-    border-radius: 50%;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+}
+
+.user {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	gap: 10px;
 }
 
 .user-name {
-    margin: 0;
-    font-weight: 500px;
+	margin: 0;
+	font-weight: 500;
+	margin-top: 20px;
+	display: flex;
+}
+
+.icon-config {
+    transition: color 400ms ease-out;
+}
+
+.user:hover .icon-config {
+    color: #8e05c2;
+    scale: 1.2;
 }
 
 .ml14 {
-    margin-left: 14px;
-}
-
-.logo-icon {
-    display: none;
-    font-size: 28px;
-    height: 35px;
-    width: 51px;
-    text-align: center;
+	margin-left: 14px;
 }
 
 .logo-img {
-    margin-left: 14px;
-    height: 32px;
+	height: 35px;
 }
 
 .sidebar button {
-    height: 60px;
-    background: transparent;
-    border: 0;
-    padding: 0;
-    font-family: inherit;
-    color: inherit;
-    cursor: pointer;
+	height: 60px;
+	background: transparent;
+	border: 0;
+	padding: 0;
+	font-family: inherit;
+	color: inherit;
+	cursor: pointer;
 }
 
-.sidebar button>span {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    height: 48px;
-    padding: 0 12px;
-    border-radius: 2px;
-    line-height: 1;
+.sidebar button > span {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	height: 48px;
+	padding: 0 12px;
+	border-radius: 2px;
+	line-height: 1;
 }
 
 .width-menu {
-    width: 50px !important;
+	width: 50px !important;
 }
 
-.sidebar button:hover>span {
-    background: #2d2d2d;
+.sidebar button:hover > span {
+	background: #2d2d2d;
 }
 
-.sidebar button:hover>span :is(i, img) {
-    scale: 1.10;
+.sidebar button:hover > span :is(i, img) {
+	scale: 1.1;
 }
 
-.sidebar button>span>span {
-    transition: 0.3s;
+.sidebar button > span > span {
+	transition: 0.3s;
 }
 
 .open-close-menu {
-    width: 100% !important;
+	width: 100% !important;
 }
 
 .open-close-menu .logo-img {
-    display: none;
+	font-size: 28px;
+	height: 32px;
+	width: 51px;
+	text-align: center;
 }
 
 .open-close-menu .ml14 {
-    display: none;
+	display: none;
 }
 
-.open-close-menu .logo-icon {
-    display: block;
+.open-close-menu button > span {
+	width: 50px !important;
 }
 
-.open-close-menu button>span {
-    width: 50px !important;
-}
-
-.open-close-menu button>span>span {
-    opacity: 0;
-    visibility: hidden;
+.open-close-menu button > span > span {
+	opacity: 0;
+	display: none;
 }
 
 .open-close-menu .profile {
-    margin-bottom: 0px;
+	margin-bottom: 60px;
 }
 
 .open-close-menu .avatar {
-    width: 30px;
-    height: 35px;
-    margin-bottom: 0;
+	width: 45px;
+	height: 45px;
+	margin-bottom: 0;
 }
 
 .open-close-menu .user-name {
-    opacity: 0;
-    visibility: hidden;
+	opacity: 0;
+	display: none;
 }
 
 .open-close-menu .menu {
-    width: 75px;
-    height: 100%;
+	width: 75px;
+	height: 100%;
 }
 
 .open-close-menu .frame {
-    width: calc( 100% - 75px);
+	width: calc(100% - 75px);
 }
 
 .open-close-menu .sidebar {
-    width: 72px;
+	width: 72px;
 }
 
 @media (width <= 700px) {
+	.menu {
+		width: 75px;
+		height: 100%;
+	}
 
-    .menu {
-        width: 75px;
-        height: 100%;
-    }
+	.frame {
+		width: calc(100% - 75px);
+		padding: 30px 30px;
+	}
 
-    .frame {
-        width: calc( 100% - 75px);
-        padding: 30px 30px;
-    }
+	.logo-img {
+		font-size: 28px;
+		height: 35px;
+		width: 51px;
+		text-align: center;
+	}
 
-    .logo-img {
-        display: none;
-    }
+	.ml14 {
+		display: none;
+	}
 
-    .ml14 {
-        display: none;
-    }
+	.sidebar {
+		width: 72px;
+	}
 
-    .logo-icon {
-        display: block;
-    }
+	.sidebar-header {
+		justify-items: unset;
+	}
 
-    .sidebar {
-        width: 72px;
-    }
+	.sidebar button > span {
+		width: 50px;
+	}
 
-    .sidebar button>span {
-        width: 50px;
-    }
+	.sidebar button > span > span {
+		opacity: 0;
+		display: none;
+	}
 
-    .sidebar button>span>span {
-        opacity: 0;
-        visibility: hidden;
-    }
+	.profile {
+		margin-bottom: 60px;
+		height: auto;
+	}
 
-    .profile {
-        margin-bottom: 0px;
-        height: auto;
-    }
+	.avatar {
+		width: 45px;
+		height: 45px;
+		margin-bottom: 0;
+	}
 
-    .avatar {
-        width: 35px;
-        height: 35px;
-        margin-bottom: 0;
-    }
+	.user-name {
+		opacity: 0;
+		display: none;
+	}
 
-    .user-name {
-        opacity: 0;
-        visibility: hidden;
-    }
+	.open-close-menu .sidebar {
+		width: 250px;
+		z-index: 9999;
+	}
 
-    .open-close-menu .sidebar {
-        width: 250px;
-        z-index: 9999;
-    }
+	.open-close-menu .logo-img {
+		font-size: 28px;
+		height: 32px;
+		width: 51px;
+		text-align: center;
+	}
 
-    .open-close-menu .logo-img {
-        display: block;
-    }
+	.name-company {
+		display: none;
+	}
+	
+	.open-close-menu .name-company {
+		display: unset;
+	}
 
-    .open-close-menu .ml14 {
-        display: block;
-    }
+	.open-close-menu .ml14 {
+		display: block;
+	}
 
-    .open-close-menu .logo-icon {
-        display: none;
-    }
+	.open-close-menu .width-menu {
+		width: 50px !important;
+	}
 
-    .open-close-menu .width-menu {
-        width: 50px !important;
-    }
+	.open-close-menu button > span {
+		display: flex;
+		align-items: center;
+		gap: 12px;
+		height: 48px;
+		padding: 0 12px;
+		border-radius: 22px;
+		line-height: 1;
+		width: 230px !important;
+	}
 
-    .open-close-menu button>span {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        height: 48px;
-        padding: 0 12px;
-        border-radius: 22px;
-        line-height: 1;
-        width: 230px !important;
-    }
+	.open-close-menu button > span > span {
+		opacity: 1;
+		display: block;
+		transition: 0.3s;
+	}
 
-    .open-close-menu button>span>span {
-        opacity: 1;
-        visibility: visible;
-        transition: 0.3s;
-    }
+	.open-close-menu .avatar {
+		width: 80px;
+		height: 80px;
+	}
 
-    .open-close-menu .avatar {
-        width: 80px;
-        height: 80px;
-    }
+	.open-close-menu .user-name {
+		opacity: 1;
+		align-items: center;
+		display: flex;
+		gap: 10px;
+		margin-top: 20px;
+	}
 
-    .open-close-menu .user-name {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    .open-close-menu .frame {
-        filter: blur(1.0rem);
-    }
-    
+	.open-close-menu .frame {
+		filter: blur(1rem);
+	}
 }
 
 .sidebar button i {
-    position: relative;
-    font-size: 28px;
-    transition: 0.2s;
+	position: relative;
+	font-size: 28px;
+	transition: 0.2s;
 }
 
 .sidebar button img {
-    width: 28px;
-    height: 28px;
-    transition: 0.2s;
+	width: 28px;
+	height: 28px;
+	transition: 0.2s;
 }
 
 .sidebar button span {
-    font-size: 18px;
+	font-size: 18px;
 }
 
-.sidebar>nav {
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+.sidebar > nav {
+	flex: 1 1 auto;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 }
 
-.sidebar>nav button:last-child {
-    margin-top: auto;
+.sidebar > nav button:last-child {
+	margin-top: auto;
 }
